fixed spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -194,7 +194,7 @@ body {
 
 .ldapEntryVisibilityToggle {
   position: relative;
-  left: -1.5px;
+  left: -2px;
   top: -3px;
   background-color: rgb(60, 60, 60);
   border-style: solid;
